# EAVLab

./: .gitignore  Attribute.cpp  Attribute.h  CMakeLists.txt  DSInfo.h  EL1DWindow.cpp  EL1DWindow.h  EL2DWindow.cpp  EL2DWindow.h  EL3DWindow.cpp  EL3DWindow.h  ELAttributeControl.cpp  ELAttributeControl.h  ELBasicInfoWindow.cpp  ELBasicInfoWindow.h  ELEmptyWindow.cpp  ELEmptyWindow.h  ELMainWindow.cpp  ELMainWindow.h  ELPipelineBuilder.cpp  ELPipelineBuilder.h  ELPlotList.h  ELPolarWindow.cpp  ELPolarWindow.h  ELRenderOptions.cpp  ELRenderOptions.h  ELSources.cpp  ELSources.h  ELSurfacePlotSettings.h  ELWindowFrame.cpp  ELWindowFrame.h  ELWindowManager.cpp  ELWindowManager.h  ElevateOperation.h  Exception.h  ExternalFaceOperation.h  HistogramOperation.h  IsosurfaceOperation.h  LICENSE.txt  Operation.h  (+11 more)
